<resources>
    <string name="app_name">BMI Tracker</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hint_word">Height...</string>
    <string name="hint_weight">Weight...</string>
    <string name="button_save">Calculate and Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="clear_all_data">Clear All Data</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="clear_records">Clear Records</string>
    <string name="units">Units</string>
    <string name="metric">Metric</string>
    <string name="imperial">Imperial</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="add_to_records">Add to records</string>
    <string name="toast_message">Enter Weight and Height</string>
    <string name="dispweight">Weight(lbs)</string>
    <string name="dispheight">Height(in)</string>
    <string name="height_cm">Height(cm)</string>
    <string name="add_a_note_optional">Add a note (optional</string>
</resources>